build: Normalizar finales de línea y configurar .gitattributes